WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22999
Database::openAndVerifyVersion() crashes on NULL, if database thread creating failed
https://bugs.webkit.org/show_bug.cgi?id=22999
Summary
Database::openAndVerifyVersion() crashes on NULL, if database thread creating...
alan
Reported
2008-12-26 06:10:45 PST
Database::openDatabase() calls Database::openAndVerifyVersion() which crashes on m_document->databaseThread()->scheduleImmediateTask(task);, if databaseThread() returns NULL. some of the Database:: functions already have if (m_document->databaseThread()) to check it.
Attachments
check if database thread exists
(1.98 KB, patch)
2008-12-26 06:18 PST
,
alan
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2008-12-26 06:18:09 PST
Created
attachment 26255
[details]
check if database thread exists
Darin Adler
Comment 2
2008-12-26 09:30:52 PST
Comment on
attachment 26255
[details]
check if database thread exists r=me
Antti Koivisto
Comment 3
2008-12-26 13:20:07 PST
Sending WebCore/ChangeLog Sending WebCore/storage/Database.cpp Transmitting file data .. Committed revision 39484.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug