2008-12-26  Zalan Bujtas  <zbujtas@gmail.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22999
        Check if database thread exists.

        * storage/Database.cpp:
        (WebCore::Database::openAndVerifyVersion):
        (WebCore::Database::markAsDeletedAndClose):
        (WebCore::Database::tableNames):



Canonical link: https://commits.webkit.org/31683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39484 268f45cc-cd09-0410-ab3c-d52691b4dbfc